# cmake-fetchcontent-libfoo

./: CMakeLists.txt  foo.pc.in
inc/foo/: foo.h
src/: foo.c
